--- a/A1/A1.ipynb
+++ b/A1/A1.ipynb
@@ -71,7 +71,7 @@
       "source": [
         "path1 = path + \"frontal.jpg\"\n",
         "path2 = path + \"lateral.jpg\"\n",
-        "%matplotlib inline\n",
+        "\n",
         "image1 = cv2.imread(path1)\n",
         "image2 = cv2.imread(path2)\n",
         "image1 = cv2.cvtColor(image1, cv2.COLOR_BGR2RGB)    # cv2.imread() returns in BGR format, conversion necessary\n",
@@ -164,8 +164,8 @@
     {
       "cell_type": "code",
       "source": [
-        "image1_gray = np.mean(image1, axis=2).astype(np.uint8)    # same as cv2.cvtColor(image1, cv2.COLOR_RGB2GRAY)\n",
-        "image2_gray = np.mean(image2, axis=2).astype(np.uint8)\n",
+        "image1_gray = np.mean(image1, axis = 2).astype(np.uint8)    # same as cv2.cvtColor(image1, cv2.COLOR_RGB2GRAY)\n",
+        "image2_gray = np.mean(image2, axis = 2).astype(np.uint8)\n",
         "\n",
         "fig, (ax1, ax2) = plt.subplots(1, 2, figsize = (10, 5))\n",
         "\n",
@@ -212,7 +212,7 @@
       "cell_type": "code",
       "source": [
         "# Please be advised that since the initial images were taken using smartphone cameras with super\n",
-        "# high resolution and kernals this small don't provide much blur effect, the images were resized\n",
+        "# high resolution and kernels this small don't provide much blur effect, the images were resized\n",
         "image1_5blur = cv2.GaussianBlur(image1_gray, (5, 5), 0.83)    # according to lectures, sigmas are chosen to be filter width / 6\n",
         "image2_5blur = cv2.GaussianBlur(image2_gray, (5, 5), 0.83)\n",
         "image1_11blur = cv2.GaussianBlur(image1_gray, (11, 11), 1.83)\n",
@@ -221,14 +221,14 @@
         "fig, ax = plt.subplots(2, 2, figsize = (8, 8))\n",
         "\n",
         "ax[0, 0].imshow(image1_5blur, cmap = 'gray')\n",
-        "ax[0, 0].set_title('Front View (5x5 kernal)')\n",
+        "ax[0, 0].set_title('Front View (5x5 kernel)')\n",
         "ax[0, 1].imshow(image2_5blur, cmap = 'gray')\n",
-        "ax[0, 1].set_title('Side View (5x5 kernal)')\n",
+        "ax[0, 1].set_title('Side View (5x5 kernel)')\n",
         "\n",
         "ax[1, 0].imshow(image1_11blur, cmap = 'gray')\n",
-        "ax[1, 0].set_title('Front View (11x11 kernal)')\n",
+        "ax[1, 0].set_title('Front View (11x11 kernel)')\n",
         "ax[1, 1].imshow(image2_11blur, cmap = 'gray')\n",
-        "ax[1, 1].set_title('Side View (11x11 kernal)')\n",
+        "ax[1, 1].set_title('Side View (11x11 kernel)')\n",
         "\n",
         "plt.show()"
       ],
@@ -345,22 +345,22 @@
         "fig, ax = plt.subplots(2, 4, figsize = (16, 8))\n",
         "\n",
         "ax[0, 0].imshow(magnitude1_5, cmap = 'gray')\n",
-        "ax[0, 0].set_title('Front View Magnitude (5x5 kernal)')\n",
+        "ax[0, 0].set_title('Front View Magnitude (5x5 kernel)')\n",
         "ax[0, 1].imshow(magnitude2_5, cmap = 'gray')\n",
-        "ax[0, 1].set_title('Side View Magnitude (5x5 kernal)')\n",
+        "ax[0, 1].set_title('Side View Magnitude (5x5 kernel)')\n",
         "ax[0, 2].imshow(magnitude1_11, cmap = 'gray')\n",
-        "ax[0, 2].set_title('Front View Magnitude (11x11 kernal)')\n",
+        "ax[0, 2].set_title('Front View Magnitude (11x11 kernel)')\n",
         "ax[0, 3].imshow(magnitude2_11, cmap = 'gray')\n",
-        "ax[0, 3].set_title('Side View Magnitude (11x11 kernal)')\n",
+        "ax[0, 3].set_title('Side View Magnitude (11x11 kernel)')\n",
         "\n",
         "ax[1, 0].imshow(orientation1_5, cmap = 'jet')\n",
-        "ax[1, 0].set_title('Front View - Orientation (5x5 kernal)')\n",
+        "ax[1, 0].set_title('Front View - Orientation (5x5 kernel)')\n",
         "ax[1, 1].imshow(orientation2_5, cmap = 'jet')\n",
-        "ax[1, 1].set_title('Side View - Orientation (5x5 kernal)')\n",
+        "ax[1, 1].set_title('Side View - Orientation (5x5 kerneal)')\n",
         "ax[1, 2].imshow(orientation1_11, cmap = 'jet')\n",
-        "ax[1, 2].set_title('Front View - Orientation (11x11 kernal)')\n",
+        "ax[1, 2].set_title('Front View - Orientation (11x11 kernel)')\n",
         "ax[1, 3].imshow(orientation2_11, cmap = 'jet')\n",
-        "ax[1, 3].set_title('Side View - Orientation (11x11 kernal)')\n",
+        "ax[1, 3].set_title('Side View - Orientation (11x11 kernel)')\n",
         "\n",
         "plt.show()"
       ],
@@ -408,14 +408,14 @@
         "fig, ax = plt.subplots(2, 2, figsize = (10, 8))\n",
         "\n",
         "ax[0, 0].imshow(canny1_5, cmap ='gray')\n",
-        "ax[0, 0].set_title('Front View - Canny Edges (5x5 kernal)')\n",
+        "ax[0, 0].set_title('Front View - Canny Edges (5x5 kernel)')\n",
         "ax[0, 1].imshow(canny2_5, cmap = 'gray')\n",
-        "ax[0, 1].set_title('Side View - Canny Edges (5x5 kernal)')\n",
+        "ax[0, 1].set_title('Side View - Canny Edges (5x5 kernel)')\n",
         "\n",
         "ax[1, 0].imshow(canny1_11, cmap = 'gray')\n",
-        "ax[1, 0].set_title('Front View - Canny Edges (11x11 kernal)')\n",
+        "ax[1, 0].set_title('Front View - Canny Edges (11x11 kernel)')\n",
         "ax[1, 1].imshow(canny2_11, cmap = 'gray')\n",
-        "ax[1, 1].set_title('Side View - Canny Edges (11x11 kernal)')\n",
+        "ax[1, 1].set_title('Side View - Canny Edges (11x11 kernel)')\n",
         "\n",
         "plt.show()"
       ],
