--- a/FP/FP.ipynb
+++ b/FP/FP.ipynb
@@ -395,7 +395,8 @@
     "&nbsp;\n",
     "#### Main - Performance Evaluation\n",
     "The system was evaluated against manually obtained ground truth values for two dashcam videos.\n",
-    "&nbsp;**Ground Truth** (very unlikely accurate, especially pedestrians in st-catherines_drive.mp4)\n",
+    "&nbsp;\n",
+    "**Ground Truth** (very unlikely accurate, especially pedestrians in st-catherines_drive.mp4)\n",
     "\n",
     "| counts        | mcgill_drive | st-catherines_drive |\n",
     "|---------------|--------------|---------------------|\n",
@@ -459,8 +460,8 @@
     "The code includes a segment for file selection through a GUI using QFileDialog.\n",
     "Handles video files, reading frames from them, and potentially saving the processed output.\n",
     "\n",
-    "&nbsp;\n",
     "**Assumptions**\n",
+    "&nbsp;\n",
     "Video Source: Assumes the input is video footage, likely from a vehicle-mounted camera.\n",
     "CUDA Support: Assumes the availability of CUDA-enabled devices for GPU acceleration.\n",
     "Environment Setup: Assumes a Python environment with necessary dependencies installed.\n",
